# Human-Perception-Module-CPP

./: .coveralls.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  HumanDetector.cpp  Scene.cpp  Stereo.cpp  main.cpp
include/: HumanDetector.hpp  Scene.hpp  Stereo.hpp
test/: CMakeLists.txt  HumanDetectorTest.cpp  StereoTest.cpp  main.cpp
